fix main width on mobile

--- a/docs/src/styles.css
+++ b/docs/src/styles.css
@@ -69,6 +69,11 @@ header {
     margin-inline: auto;
     padding-inline: var(--spacing-8);
     max-width: var(--page-content-width);
+
+    @media (width < 1200px) {
+      padding-inline: var(--spacing-4);
+      max-width: 100vw;
+    }
   }
 }
 
